package bank.models;

public class Account {
}
