package bank.models;

public class Advisor {
}
