package bank.models;

public class Customer {
}
