package bank.models;

public class Operation {
}
