package bank.models;

public class User {
}
